include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_ENERGY_EQUIVALENT;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_IN_U;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MOLAR_MASS;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MUON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MUON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_NEUTRON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_NEUTRON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_PROTON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_PROTON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_RELATIVE_ATOMIC_MASS;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TAU_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO;